# algebraic-classes

./: CHANGELOG  LICENSE  README.md  algebraic-classes.cabal
.github/workflows/: haskell-ci.yml
Data/: Algebra.hs
Data/Algebra/: Internal.hs  TH.hs
examples/: Fractional.hs  Signatures.hs
